test/conformance/chainsaw/validate/clusterpolicy/cornercases/ephemeral-containers-deprecated/resource-assert.yaml
apiVersion: v1
kind: Pod
metadata:
  name: mypod
  namespace: default
